# nexus-agent

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  PROJECT_REPORT.md  README.md  REQUIREMENTS.md  fix_lines.py  install.ps1  install.sh  memory.md  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: lint.yml  publish.yml  test-and-audit.yml  test.yml
.jules/: bolt.md  sentinel.md
.nexus/memory/: episodic.db  long_term.db
docs/: API.md  ARCHITECTURE.md  CODEBASE_AUDIT.md  CONTEXT.md  CONTRIBUTING.md  CUSTOM_INFERENCE_SERVER.md  FRESH_AUDIT.md  HYBRID_ARCHITECTURE.md  MEMORY.md  Offline Localized AI Agent.md  ROADMAP.md  SECURITY.md  exhaustive_audit.md  exhaustive_audit_v2.md  implementation_plan.md  task.md
docs/examples/: cli_reference.md  cloud_providers.md  getting_started.md  local_models.md
nexus-rs/: Cargo.toml
nexus-rs/src/: app.rs  main.rs
nexus-rs/src/config/: loader.rs  mod.rs  types.rs
nexus-rs/src/ipc/: acp_client.rs  mod.rs  process.rs  protocol.rs
nexus-rs/src/tui/: engine.rs  inspector.rs  memory_browser.rs  mod.rs
nexus-rs/src/tui/render/: blocks.rs  compositor.rs  diff.rs  mod.rs  themes.rs
src/nexus_agent/: __init__.py  __main__.py  _default_config.yaml  backend.py
src/nexus_agent/cli/: __init__.py  app.py  auth.py  command_dispatcher.py  doctor.py  event_handler.py  input_handler.py  input_handler_simple.py  models_db.py  renderer.py  resource_monitor.py  runtimes.py  session_handler.py  theme.py  wizard.py
src/nexus_agent/cli/commands/: __init__.py  _base.py  agent.py  agent_mixin.py  config.py  config_mixin.py  debug.py  debug_mixin.py  git.py  interactive_mixin.py  interactive_ui.py  misc.py  misc_mixin.py  model.py  model_mixin.py  provider_mixin.py  runtime_mixin.py  session.py  session_mixin.py  tool_mixin.py  tools.py
src/nexus_agent/core/: __init__.py  agent.py  capabilities.py  config.py  context.py  debate.py  devops.py  executor.py  nla_telemetry.py  orchestrator.py  planner.py  plugins.py  project_context.py  reflection.py  sandbox.py  self_heal.py  sqlite_store.py  task_graph.py  updater.py  usage.py
src/nexus_agent/gui/: __init__.py  server.py
src/nexus_agent/gui/frontend/: index.html
src/nexus_agent/llm/: __init__.py  base.py  model_manager.py  onnx_engine.py  retry.py  runtime_manager.py
src/nexus_agent/llm/local_engine/: __init__.py  engine.py  inference_mixin.py  protocol_mixin.py  utils.py
src/nexus_agent/llm/providers/: __init__.py  anthropic_provider.py  aws_bedrock_provider.py  custom_openai_provider.py  deepseek_provider.py  factory.py  google_provider.py  groq_provider.py  ollama_provider.py  (+2 more)
src/nexus_agent/mcp/: __init__.py  acp_server.py  client.py  server.py  transport.py
src/nexus_agent/memory/: __init__.py  episodic.py  long_term.py  memory_manager.py  user_profile.py  vector_embedding.py  vector_store.py  working_memory.py
src/nexus_agent/permissions/: __init__.py  manager.py  rules.py
src/nexus_agent/protocol/: __init__.py  agent_protocol.py
src/nexus_agent/session/: __init__.py  background.py  checkpoint.py  manager.py  storage.py
src/nexus_agent/skills/: __init__.py  skill_loader.py  skill_registry.py
src/nexus_agent/tools/: __init__.py  agent_tools.py  base.py  batch_edit.py  boomerang.py  browser.py  code_edit.py  code_intel.py  council.py  file_ops.py  git_ops.py  lsp_client.py  lsp_transport.py  memory.py  rag_search.py  shell.py  todowrite.py  web_search.py  webfetch.py
src/nexus_agent/training/: __init__.py
tests/: test_advanced.py  test_imports.py  test_providers.py  test_retry.py  test_tui_rebuild.py
tests/nexus_agent/cli/: test_cli.py  test_cost_command.py  test_event_handler.py  test_input_handler.py  test_input_handler_simple.py  test_rendering_updates.py  test_runtimes.py  test_vector_commands.py  test_wizard.py
tests/nexus_agent/core/: test_capabilities.py  test_core.py  test_orchestrator.py  test_plugins.py  test_project_context.py  test_updater.py  test_usage.py
tests/nexus_agent/llm/: test_benchmark.py  test_smart_router.py
tests/nexus_agent/mcp/: test_acp_memory_integration.py  test_acp_server.py  test_acp_usage.py  test_mcp.py
tests/nexus_agent/memory/: test_memory.py  test_vector_store.py
tests/nexus_agent/permissions/: test_permissions.py
tests/nexus_agent/session/: test_session.py
tests/nexus_agent/skills/: test_skill_templating.py  test_skills.py
tests/nexus_agent/tools/: test_batch_edit.py  test_browser.py  test_code_edit.py  test_code_intel.py  test_lsp_client.py  test_lsp_transport.py  test_memory_tool.py  test_todowrite.py  test_webfetch.py
(+16 files in other folders)
