[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "Offline-first LLM coding agent with CLI and GUI interfaces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NexusAgent Contributors"}
]
keywords = ["llm", "agent", "coding", "offline", "cli", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "llama-cpp-python>=0.3.0",
    "click>=8.1.0",
    "rich>=13.0.0",

    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "watchfiles>=0.21.0,<1.0.0",
    "pygments>=2.18.0",
    "tree-sitter>=0.22.0",
    "psutil>=5.9.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]

# CUDA — NVIDIA GPU acceleration via llama.cpp
cuda = [
    "llama-cpp-python[cuda]>=0.3.0",
]

# Vulkan — Cross-platform GPU acceleration (AMD, Intel, NVIDIA)
vulkan = [
    "llama-cpp-python[vulkan]>=0.3.0",
]

# ROCm — AMD GPU acceleration (Linux)
rocm = [
    "llama-cpp-python[rocm]>=0.3.0",
]

# Metal — Apple GPU acceleration (macOS)
metal = [
    "llama-cpp-python[metal]>=0.3.0",
]

# SYCL — Intel GPU acceleration (oneAPI)
sycl = [
    "llama-cpp-python[sycl]>=0.3.0",
]

# NPU — Neural Processing Unit (Windows DirectML / ONNX)
npu = [
    "onnxruntime-genai>=0.3.0",
    "onnxruntime-directml>=1.18.0",
]

# OpenVINO — Intel CPU/GPU/NPU
openvino = [
    "llama-cpp-python[openvino]>=0.3.0",
    "openvino>=2024.0.0",
]

# TPU — Google Tensor Processing Unit (via JAX)
tpu = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

# GUI dependencies
gui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "websockets>=12.0",
]

# Cloud API providers
providers = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
    "boto3>=1.35.0",
]

# Security — OS keychain integration for credential storage
security = [
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
]

# MCP (Model Context Protocol) support
mcp = [
    "mcp>=1.0.0",
]

# All hardware backends
hw-all = [
    "nexus-agent[cuda,vulkan,rocm,metal,sycl,npu,openvino,tpu]",
]

# All optional features
all = [
    "nexus-agent[hw-all,gui,providers,mcp]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
nexus = "nexus_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/nexus-agent/nexus-agent"
Documentation = "https://nexus-agent.readthedocs.io"
Repository = "https://github.com/nexus-agent/nexus-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus_agent = ["gui/frontend/**/*", "py.typed", "_default_config.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
